# icemodels

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci_tests.yml  docs.yml
docs/: conf.py  generate_example_plots.py  index.rst  requirements.txt  sg_execution_times.rst
docs/examples/: README.rst  plot_cde_correction.py  plot_dream_database.py  plot_filter_analysis.py  plot_ice_mixtures.py  plot_temperature_dependence.py
docs/icemodels/: api.rst  databases.rst  examples.rst  icemodels.extern.rst  icemodels.rst  icemodels.tests.rst  icemodels.utils.rst  icemodels.utils.tests.rst  index.rst  installation.rst  modules.rst  quickstart.rst  tutorial.rst
examples/: plot_seds_examples.py
icemodels/: QUICKREF_plot_seds.py  README_stellar_colors.md  __init__.py  absorbance_in_filters.py  colorcolordiagrams.py  conftest.py  core.py  gaussian_model_components.py  plot_seds.py  stellar_colors_in_filters.py
icemodels/tests/: test_core.py  test_plot_seds.py
licenses/: LICENSE.rst
notebooks/: CO2_Phoenix_Example.ipynb  DerivationNotes.ipynb  JWSTWhitePaperPrep.ipynb  OCNExploration.ipynb  SpectraFromPhoto.ipynb  Stellar_Colors_Demo.ipynb
