[metadata]
name = icemodels
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = https://github.com/keflavich/icemodels
description = icemodels
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = keflavich/icemodels

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    model-yso-sed-grid @ git+https://github.com/astrofrog/mysg.git@5599d16c4faa52ce47e0cb5831adca5a49e79401


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
icemodels = data/*

[tool:pytest]
testpaths = "icemodels" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --ignore=docs/_build --ignore=docs/examples

[coverage:run]
omit =
    icemodels/_astropy_init*
    icemodels/conftest.py
    icemodels/*setup_package*
    icemodels/tests/*
    icemodels/*/tests/*
    icemodels/extern/*
    icemodels/version*
    */icemodels/_astropy_init*
    */icemodels/conftest.py
    */icemodels/*setup_package*
    */icemodels/tests/*
    */icemodels/*/tests/*
    */icemodels/extern/*
    */icemodels/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
